[b]Version 0.5.63 (not released yet)[/b]:

(2007-12-22)
 * (Windows) Now idx/sub subtitles should work also when using short names.
   So I think this stuff is finished.
 * Added the Finnish translation, sent by peeaivo <peeaivo@gmail.com>
 * For the option to skip the loop filter on HD videos: now a video is
   considered HD if its height (not width!) is equal or greater than 
   the value specified in the HD_height option in smplayer.ini (720 by default).
 * Updated the help for the loop filter option in Preferences->Performance.

(2007-12-21)
 * (Windows) Now the short names are used too for subtitle files (except
   idx/sub) and external audio files.
 * Added a manpage for smplayer, created by Matvey Kozhev <sikon@lucidfox.org>
 * (By user request) The skip loop filter in Preferences->Performance has 
   changed. Now it's called "loop filter" and the possible values are:
   "Enabled", "Skip (always)" and "Skip only on HD videos". If the last option
   is selected, the loop filter will be skipped if the codec for the video is
   "ffh264" and the width of the video is 1024 or greater (this value is
   subject to change, possibly in the future it could be configured by the 
   user).
 * Support for colored console output is disabled under Windows. I don't 
   know any build compiled with that option.

(2007-12-20)
 * (Windows) Added a new option for the config file: use_short_pathnames.
   If set to true, smplayer will pass to mplayer the short filename(8+3)
   to mplayer. This allows to play files which contains characters outside 
   the local codepage (mplayer bug). Currently this only works with the file
   to play, not with subtitles filenames or other filenames that smplayer 
   might pass to mplayer.
   To test: I don't know if this would break compatibility with Win98.
 * (Windows) Added an option in Preferences->Advanced to enable easily the
   option mentioned above.
 * Added patch by profoX to add support for the mplayer output when compiled